[package]
name = "cp437_constants"
version = "1.0.0"
edition = "2021"
authors = ["Paul Jones"]
description = "Defined constants covering the entirety of ASCII code page 437 (https://en.wikipedia.org/wiki/Code_page_437)"
readme = "README.md"
license = "MIT"
license-file = "license.txt"
homepage = "https://github.com/SenojLuap/cp437"
repository = "https://github.com/SenojLuap/cp437"